:wrench: Fixed footer text-align

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -59,6 +59,7 @@ footer {
   height: 10px;
   clear:both;
   padding-top:10px;
+  text-align: center;
 }
 
 #user-bar{
